# neptune

./: .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  CHANGELOG.md~  DEBIAN_DEPENDENCIES.sh  INSTALL.sh  NOTICE.txt  README.md  RUN.sh  examples.md~  format.md~  git.diff.patch  index.html  index.md~  install-drmaa.md~  install.md~  mkdocs.yml  neptune.sh  neptune.tmp  output.md~  parameters.md~  pyproject.toml  search.html  setup.py  sitemap.xml  tox.ini  walkthrough.md~
.ci/: Dockerfile  run_flake8.sh  run_tests.sh  slurm.conf  slurm.sh
.github/workflows/: ci.yml
CHANGELOG/: index.html
docs/: about.md  examples.md  format.md  index.md  install-drmaa.md  install.md  news.md  output.md  parameters.md  walkthrough.md
documentation/manual/: Manual.tex
documentation/math/: Mathematics.bib  Mathematics.tex
examples/: index.html
format/: index.html
install/: debian_dependencies.sh  index.html  neptune
install-drmaa/: index.html
mkdocs/: search_index.json
neptune/: AggregateKMers.py  ConsolidateSignatures.py  ConsolodateSignatures.py  CountKMers.py  Database.py  Execution.py  ExtractSignatures.py  FilterSignatures.py  JobManager.py  JobManagerDRMAA.py  JobManagerParallel.py  Neptune.py  PrepareKMers.py  Signature.py  Utility.py
news/: index.html
output/: index.html
parameters/: index.html
search/: search_index.json
tests/: TestingUtility.py  test_aggregate.py  test_count.py  test_database.py  test_execution.py  test_extract.py  test_filter.py  test_job_manager.py  test_neptune.py  test_signature.py  test_utility.py
walkthrough/: index.html
(+65 files in other folders)
